--- a/src/app/products/product-list/product-list.component.html
+++ b/src/app/products/product-list/product-list.component.html
@@ -5,12 +5,14 @@
 <h2>Product List</h2>
 
 <ul>
-    <li *ngFor="let product of products ; let i = index " (click)="selectedProduct=product">
+    <li *ngFor="let product of products ; let i = index ">
+        <!-- (click)="selectedProduct=product" -->
         <!-- {{product.name | lowercase}} -->
         <!-- {{product.name | uppercase}} -->
 
         <!-- <app-product-view [id]="i"></app-product-view> -->
-        {{product.name}}
+        <!-- {{product.name}} -->
+        <a [routerLink]="['/products', product.id]" routerLinkActive="router-link-active">{{product.name}} </a>
     </li>
 </ul>
 <app-product-detail *ngIf="selectedProduct; else noProduct" [id]="selectedProduct.id" (bought)="onBuy()"
